--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0",
+    "html2canvas": "^1.4.1",
+    "jstree": "^3.3.16"
   }
 }
